# TestShop

./: .env.example  LICENSE  Makefile  docker-compose.yml  pyproject.toml
src/core/: settings.py  urls.py
src/products/: apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_import_data.py
src/users/: models.py  serializers.py  services.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
